# classic-confections-mcp

./: README.md
classic_confections_mcp/: __init__.py  pyproject.toml  server.py
